# chat-cli

./: .gitignore  Cargo.toml  README.md
crates/ui/: .gitignore  Cargo.toml
crates/ui/src/: contacts.rs  home.rs  login.rs  main.rs  me.rs  recent_chat.rs  token.rs  ui.rs  user_input.rs
src/: add_friend.rs  config.rs  console.rs  friend.rs  main.rs  main_select.rs  recent_chat.rs  style.rs  token.rs  user.rs
