[package]
name = "chat-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17",features = ["derive"] }
dialoguer = "0.11.0"
reqwest = { version = "0.12.7", features = ["json", "blocking", "stream"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
chrono = "0.4.31"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"