[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui= "0.28.1"
crossterm = "0.28.1"
color-eyre = "0.6.3"
rand = "0.9.0-alpha.2"
reqwest = { version = "0.12.7", features = ["json", "blocking", "stream"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
chrono = "0.4.31"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"
regex = "1.10.6"
jsonwebtoken = "9"
indexmap = "2.5.0"
config = "0.14.0"